--- a/net/qt5-network/Makefile
+++ b/net/qt5-network/Makefile
@@ -14,7 +14,7 @@ BROKEN_SSL_REASON_openssl-devel=	error: member access into incomplete type 'X509
 
 RUN_DEPENDS=	${LOCALBASE}/share/certs/ca-root-nss.crt:security/ca_root_nss
 
-USES=		portssl
+USES=		ssl
 USE_QT5=	core qmake_build buildtools_build
 QT_DIST=	base
 HAS_CONFIGURE=	yes
